--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -197,7 +197,176 @@
 </div>
 
 
+<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
+  <style>
+    .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 40px; }
+    .log-table th { background: #f8f9fa; font-size: 11px; color: #0c2340; text-transform: uppercase; padding: 18px 10px; border-bottom: 2px solid #0c2340; }
+    .log-table td { padding: 18px 10px; border-bottom: 1px solid #edf2f7; vertical-align: middle; }
+    
+    @media (max-width: 768px) {
+      .log-table thead { display: none; }
+      .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; box-sizing: border-box; }
+      .log-table tr { margin-bottom: 20px; border: 1px solid #e2e8f0 !important; border-radius: 15px; padding: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); }
+      .log-table td { border: none; padding: 0; text-align: left; }
+      .hide-log-mobile { display: none !important; }
+      .mobile-status-bar { display: flex !important; background: #fcfcfc; border-radius: 8px; margin-top: 15px; padding: 10px 5px; border: 1px dashed #e2e8f0; }
+      .ms-item { flex: 1; text-align: center; border-right: 1px solid #eee; }
+      .ms-item:last-child { border-right: none; }
+      .ms-label { display: block; font-size: 9px; color: #aaa; font-weight: 800; margin-bottom: 2px; }
+      .ms-value { display: block; font-size: 13px; font-weight: 800; }
+    }
+    
+    @media (min-width: 769px) {
+      .mobile-status-bar { display: none !important; }
+      .col-date { width: 15%; }
+      .col-course { width: 45%; }
+    }
+    /* 언더파 스타일 */
+    .under-par { color: #e74c3c; font-weight: 800; }
+  </style>
+
+  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
+    <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
+      JOSHUA HONG : PERFORMANCE LOG
+    </h1>
+    <p style="margin: 8px 0 0; color: #7f8c8d; font-size: 14px; font-weight: 500; letter-spacing: 1px;">
+      Official Tournament Schedule
+    </p>
+  </div>
+
+  <div style="margin-bottom: 50px;">
+    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px; flex-wrap: wrap; gap: 10px;">
+      <h2 style="color: #0c2340; border-left: 6px solid #e74c3c; padding-left: 15px; font-size: 22px; margin: 0; font-weight: 800;">
+        Cancun Collegiate Qualifying <span style="font-weight: 400; font-size: 16px; color: #e74c3c;">(In Progress)</span>
+      </h2>
+    </div>
+
+    <div style="border-radius: 15px; border: 1px solid #e2e8f0; overflow: hidden; box-shadow: 0 10px 30px rgba(231, 76, 60, 0.1);">
+      <table class="log-table" style="margin-bottom: 0;">
+        <thead>
+          <tr style="border-bottom: 2px solid #e74c3c;">
+            <th class="col-date">Date</th>
+            <th class="col-course">Course</th>
+            <th style="text-align: center;">Score</th>
+            <th style="text-align: center;">Par</th>
+            <th style="text-align: center;">Status</th>
+            <th style="text-align: center;">Finish</th>
+          </tr>
+        </thead>
+        <tbody style="color: #2d3436;">
+          <tr style="background: rgba(231, 76, 60, 0.02);">
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">Jan 22</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course</div>
+              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">68</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T1</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; font-weight: 700;">68</td>
+            <td class="hide-log-mobile" style="text-align: center;"><span class="under-par">-4</span></td>
+            <td class="hide-log-mobile" style="text-align: center; font-size: 12px; font-weight: 700;">Final</td>
+            <td class="hide-log-mobile" style="text-align: center; font-weight: 800;">T1</td>
+          </tr>
+          <tr>
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">Jan 23</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course</div>
+              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#e74c3c;">Today</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; font-size: 12px; font-weight: 700; color:#e74c3c;">Today</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+          <tr>
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">Jan 26</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course</div>
+              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Scheduled</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; font-size: 11px; color: #95a5a6;">Scheduled</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+          <tr>
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">Jan 27</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course</div>
+              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Scheduled</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; font-size: 11px; color: #95a5a6;">Scheduled</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <hr style="border: none; border-top: 1px dashed #e2e8f0; margin-bottom: 50px;">
+
+  <div>
+    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px; flex-wrap: wrap; gap: 10px;">
+      <h2 style="color: #0c2340; border-left: 6px solid #2e7d32; padding-left: 15px; font-size: 22px; margin: 0; font-weight: 800;">
+        2026 NCAA Spring Season <span style="font-weight: 400; font-size: 16px; color: #2e7d32;">(Scheduled)</span>
+      </h2>
+      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">
+        Last Updated: Jan 2026
+      </div>
+    </div>
+
+    <div style="border-radius: 15px; border: 1px solid #e2e8f0; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
+      <table class="log-table" style="margin-bottom: 0;">
+        <thead>
+          <tr style="border-bottom: 2px solid #2e7d32;">
+            <th class="col-date">Date</th>
+            <th class="col-course">Tournament / Course</th>
+            <th style="text-align: center;">R1-R2-R3</th>
+            <th style="text-align: center;">Total</th>
+            <th style="text-align: center;">Par</th>
+            <th style="text-align: center;">Finish</th>
+          </tr>
+        </thead>
+        <tbody style="color: #2d3436;">
+          <tr><td><div style="font-weight:600; font-size:14.5px;">Feb 2-4</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">Compadres Collegiate (UTRGV)</div><div style="font-size:13px; color:#7f8c8d;">Iberostar Playa Paraiso - Playa Del Carmen, MX</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr style="background-color: #fcfdfe;"><td><div style="font-weight:600; font-size:14.5px;">Feb 23-24</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">Lone Star Collegiate (UTSA)</div><div style="font-size:13px; color:#7f8c8d;">TPC San Antonio Canyons - San Antonio, TX</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr><td><div style="font-weight:600; font-size:14.5px;">Mar 2-3</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">Golden Nugget Inv. (Lamar)</div><div style="font-size:13px; color:#7f8c8d;">The CC at Golden Nugget - Lake Charles, LA</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr style="background-color: #fcfdfe;"><td><div style="font-weight:600; font-size:14.5px;">Mar 16-17</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">Arizona Thunderbirds Intercollegiate</div><div style="font-size:13px; color:#7f8c8d;">Tucson CC - Tucson, AZ</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr><td><div style="font-weight:600; font-size:14.5px;">Mar 23-24</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">Bell Bank "Pay it Forward" Collegiate</div><div style="font-size:13px; color:#7f8c8d;">Wigwam GC - Litchfield Park, AZ</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr style="background-color: #fcfdfe;"><td><div style="font-weight:600; font-size:14.5px;">Apr 6-7</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">Tiger Intercollegiate (Missouri)</div><div style="font-size:13px; color:#7f8c8d;">The Club at Old Hawthorne - Columbia, MO</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr style="background: rgba(201, 138, 46, 0.03);"><td><div style="font-weight:600; font-size:14.5px; color:#c98a2e;">Apr 27-29</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">American Conference Championship</div><div style="font-size:13px; color:#7f8c8d;">Ritz Carlton Members Club - Sarasota, FL</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr><td><div style="font-weight:600; font-size:14.5px;">May 18-20</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">NCAA Regional</div><div style="font-size:13px; color:#7f8c8d;">TBD - Location to be Announced</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+          <tr style="background: rgba(12, 35, 64, 0.05);"><td><div style="font-weight:600; font-size:14.5px; color:#0c2340;">May 29 - Jun 3</div><div style="font-weight:800; color:#0c2340; font-size:16px; margin:2px 0;">NCAA Championship</div><div style="font-size:13px; color:#7f8c8d;">Omni La Costa - Carlsbad, CA</div><div class="mobile-status-bar"><div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div><div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div></div></td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td><td class="hide-log-mobile" style="text-align:center; color:#bdc3c7;">-</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
 
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
