--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -201,14 +201,15 @@
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
   <style>
-    /* 기본 테이블 스타일 (데스크탑 중심) */
+    /* 기본 테이블 스타일 (데스크탑) */
     .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 40px; border: none; }
     .log-table th { background: #f8f9fa; font-size: 12px; color: #0c2340; text-transform: uppercase; padding: 15px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
     .log-table th.col-left { text-align: left; padding-left: 20px; }
     .log-table td { padding: 15px 10px; border-bottom: 1px solid #edf2f7; vertical-align: middle; text-align: center; }
     .log-table td.col-left { text-align: left; padding-left: 20px; }
     
-    .under-par { color: #e74c3c; font-weight: 800; }
+    /* 언더파 강조 공통 클래스 */
+    .under-par { color: #e74c3c !important; font-weight: 800 !important; }
     .scheduled-text { font-size: 11px; color: #95a5a6; font-weight: 600; }
     .today-text { font-size: 12px; font-weight: 800; color: #e74c3c; }
 
@@ -268,13 +269,13 @@
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">68</span></div>
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
                 <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
                 <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T1</span></div>
               </div>
             </td>
-            <td class="hide-mobile" style="font-weight: 700; font-size: 16px;">68</td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">68</span></td>
             <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-4</span></td>
             <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
             <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">T1</td>
@@ -302,7 +303,7 @@
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
@@ -316,7 +317,7 @@
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
@@ -328,42 +329,6 @@
       </table>
     </div>
   </div>
-
-  <hr style="border: none; border-top: 1px dashed #e2e8f0; margin-bottom: 50px;">
-
-  <div>
-    <h2 style="color: #0c2340; border-left: 6px solid #2e7d32; padding-left: 15px; font-size: 22px; margin: 0 0 20px; font-weight: 800;">
-      2026 NCAA Spring Season <span style="font-weight: 400; font-size: 16px; color: #2e7d32;">(Scheduled)</span>
-    </h2>
-
-    <div style="border-radius: 15px; border: 1px solid #e2e8f0; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
-      <table class="log-table" style="margin-bottom: 0;">
-        <thead>
-          <tr style="border-bottom: 2px solid #2e7d32;">
-            <th class="col-info col-left">Tournament / Course</th>
-            <th class="col-score">R1-2-3</th>
-            <th class="col-par">Total</th>
-            <th class="col-status">Par</th>
-            <th class="col-finish">Finish</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px;">Feb 2-4, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Compadres Collegiate (UTRGV)</div>
-              <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX</div>
-            </td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          </tr>
-          </tbody>
-      </table>
-    </div>
-  </div>
-</div>
 
 
 
