--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -298,11 +298,27 @@
               <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
-            <a href="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/qualify%201%20cancun.jpg" 
-       target="_blank" 
-       style="display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
-      <span style="margin-right: 5px;">📊</span> VIEW SCORECARD
-    </a>
+<button type="button" 
+        onclick="document.getElementById('scorecard-modal').style.display='flex'"
+        style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+  <span style="margin-right: 5px;">📊</span> VIEW SCORECARD
+</button>
+
+<div id="scorecard-modal" 
+     onclick="this.style.display='none'" 
+     style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; justify-content: center; align-items: center; padding: 20px; box-sizing: border-box;">
+  
+  <div style="position: relative; max-width: 100%; max-height: 90%;">
+    <div style="color: white; text-align: right; font-size: 12px; margin-bottom: 10px; font-weight: 600;">CLOSE [X]</div>
+    
+    <img src="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/qualify%201%20cancun.jpg" 
+         style="max-width: 100%; max-height: 80vh; border-radius: 8px; box-shadow: 0 0 30px rgba(0,0,0,0.5); border: 3px solid white;">
+    
+    <div style="color: white; text-align: center; margin-top: 15px; font-size: 14px; font-weight: 700;">
+      Cancun Collegiate Qualifying - Round 1 Scorecard
+    </div>
+  </div>
+</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
